Update this branch after merge with 'update external url' code
