# src/TorchWeb/OpenAPIs/openapi.json
@@ -143,6 +143,17 @@
         },
         "type": "object"
       },
+      "SendInviteRequest": {
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "roles": {
+            "type": "integer"
+          }
+        },
+        "type": "object"
+      },
       "SpecimenImageResponse": {
         "properties": {
           "external_url": {
@@ -1092,6 +1103,47 @@
           }
         },
         "summary": "Users Getall",
+        "tags": [
+          "Users"
+        ]
+      }
+    },
+    "/users/register-user": {
+      "post": {
+        "operationId": "SendInvite",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SendInviteRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserResponse"
+                }
+              }
+            },
+            "description": "Successful response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationError"
+                }
+              }
+            },
+            "description": "Validation error"
+          }
+        },
+        "summary": "Register User",
         "tags": [
           "Users"
         ]
